--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Linear Regression supervise machine learning model. It is used to predict the survival rate of a passenger on a Titanic ship."
+        "Linear Regression supervised machine learning model. It is used to predict the survival rate of a passenger on a Titanic ship."
       ],
       "metadata": {
         "id": "Oj1FRASgfOv3"
